# camldiff

./: .gitignore  dune-project
lib/: dune  lcs.ml
test/: dune
